# finsight-ai

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  roadmap.md
backend/: .env  .env.example  README.md  TODO.md  TODO_watchlist_engineer.md  conftest.py  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 70c5898f1884_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/config/: __init__.py  settings.py
backend/app/core/: auth.py  dependencies.py  security.py
backend/app/database/: __init__.py  base.py  database.py  session.py
backend/app/intelligence/: dashboard_engine.py  diversification_engine.py  financial_metrics.py  portfolio_analyzer.py  risk_engine.py
backend/app/ml/: __init__.py  feature_engineering.py  model_registry.py
backend/app/models/: __init__.py  article_sentiment.py  article_symbol_mention.py  audit_log.py  base.py  conversation.py  conversation_message.py  historical_price.py  market_symbol.py  mixins.py  ml_model.py  news_article.py  portfolio.py  portfolio_transaction.py  prediction.py  prediction_explanation.py  refresh_token.py  role.py  user.py  user_role_assignment.py  watchlist.py  watchlist_item.py
backend/app/schemas/: __init__.py  auth.py  base.py  historical_price.py  market_symbol.py  portfolio.py  portfolio_analytics.py  prediction.py  user.py  (+1 more)
backend/tests/: conftest.py  test_auth.py  test_dashboard.py  test_historical_prices.py  test_models.py  test_portfolio_analytics.py
(+42 files in other folders)
